cif/org.eclipse.escet.cif.tests/tests/checks/EdgeNoMultiAssignCheck.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  ----------------------------------
  (1/1) Edge has a multi-assignment.
  ----------------------------------
   * In location "a.l3":
     - edge e do (va, vb) := (1, 2) goto l4;
                          ^
   * In location "a.l6":
     - edge e do if true: (va, vb) := (1, 2) end goto l7;
                                   ^
   * In location "a.l9":
     - edge e do (li[0], li[1]) := (1, 2) goto l1;
                                ^
   * In automaton "all":
     - edge e do (va, vb) := (1, 2);
                          ^
     - edge e do (vb, va) := (3, 4);
                          ^
   * In location "g.A.l3":
     - edge e do (va, vb) := (1, 2) goto l4;
                          ^
   * In automaton "multi_asgn":
     - edge e do (va, vb) := (1, 2);
                          ^
     - edge e do if true: (va, vb) := (1, 2) end;
                                   ^
   * In automaton "partial_asgn":
     - edge e do (li[0], (li[1], li[2])) := (1, (2, 3));
                                         ^
